Issue #20368: The null character now correctly passed from Tcl to Python (in unicode strings only).  Improved error handling in variables-related commands.